--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -8,7 +8,7 @@ jobs:
     
     steps:
       - name: echo a string
-        run: echo "Hello Africa"
+        run: eceho "Hello Africa"
       - name: multiline script
         run: |
           node -v
