--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -13,3 +13,9 @@ jobs:
         run: |
           node -v
           npm -v
+      - name: python Command
+        run: |
+          import platform
+          print(platform.processor())
+        shell: python
+        
