--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -8,7 +8,7 @@ jobs:
     
     steps:
       - name: echo a string
-        run: eceho "Hello Africa"
+        run: echo "Hello Africa"
       - name: multiline script
         run: |
           node -v
@@ -18,4 +18,3 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
-        
