--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -20,7 +20,8 @@ jobs:
         shell: python
   run-shell-on-windows:
     runs-on: windows-latest
-
+    needs:
+      - run-shell-command
     steps:
       - name: Get Directory
         run: Get-Location
