--- a/.github/workflows/actions-push.yaml
+++ b/.github/workflows/actions-push.yaml
@@ -7,6 +7,10 @@ jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
+      - name: check kernel version
+        run: |
+          uname -a
+          cat /etc/*release 
       - name: Simple JS Actions
         id: greet
         uses: actions/hello-world-javascript-action@v1
